tests/globals/valid/forward_declaration.amu
s32 foo;

s32 main() {
    return foo;
}

s32 foo = 3;