tests/globals/invalid/use_before_declaration.amu
main() : s32 {
    return foo;
}

foo:s32 = 3;